--- a/client/css/pelisFree.css
+++ b/client/css/pelisFree.css
@@ -69,6 +69,8 @@ a{
     justify-content: center;
     width: 90px;
     height: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 @media (min-width:768px) {
     .logo{
@@ -103,9 +105,9 @@ a{
 {
     width: 25px;
 }
-.usuario{
-    width: 40px;
-    height: 40px;
+.cerrar-sesion{
+    width: 25px;
+    height: 100%;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -254,4 +256,8 @@ a{
     color: red;
     text-align: center;
     font-size: 26px;
+}
+
+.peliculas{
+    cursor: pointer;
 }
